@@ -27,7 +27,7 @@ $(document).ready(function() {
 		
 		weekStart: 1,
 		
-		rightToLeft: true,
+		//rightToLeft: true,
 		
 		events: [
 			{
